@@ -25,6 +25,8 @@ apt (0.9.7.6) UNRELEASED; urgency=low
   * apt-pkg/policy.cc:
     - match pins with(out) an architecture as we do on the commandline
       (partly fixing #687255, b= support has to wait for jessie)
+  * apt-pkg/contrib/netrc.cc:
+    - remove the 64 char limit for login/password in internal usage
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 19 Sep 2012 11:29:56 +0200
 
